the big renaming, season 1, episode 3: ego trip

--- a/org.rulez.magwas.zenta.editor/plugin.properties
+++ b/org.rulez.magwas.zenta.editor/plugin.properties
@@ -1,10 +1,10 @@
 pluginName=Zenta
-providerName=Phillip Beauvoir
+providerName=Árpád Magosányi
 productName=Zenta
 appName=Zenta
 swtAppName=Zenta
 
-aboutText=Zenta - Zentamate Modelling\n\nVersion: 2.4.0\n\n(c) Copyright 2010-12, Phillip Beauvoir. All rights reserved.\nVisit http://archi.cetis.ac.uk/
+aboutText=Zenta - Zentamate Modelling\n\nVersion: 2.4.0\n\n(c) Copyright 2013- Árpád Magosányi\n   2010-12, Phillip Beauvoir. All rights reserved.\nVisit http://magwas.rulez.org/zenta/
 
 viewTreeModel=Models
 viewProperties=Properties
