--- a/org.rulez.magwas.zenta.canvas/plugin.properties
+++ b/org.rulez.magwas.zenta.canvas/plugin.properties
@@ -1,6 +1,6 @@
 editorCanvas=Canvas
 pluginName = Canvas Editor
-providerName = Phillip Beauvoir
+providerName = Árpád Magosányi
 
 propertyTab.label = Hint
 propertyTab.label.0 = Image
