got rid of warnings (minus mac/win)

--- a/org.rulez.magwas.zenta.canvas/build.properties
+++ b/org.rulez.magwas.zenta.canvas/build.properties
@@ -9,4 +9,4 @@ bin.includes = META-INF/,\
                templates/
 jars.compile.order = org.rulez.magwas.zenta.canvas.jar
 source.org.rulez.magwas.zenta.canvas.jar = src/
-output.org.rulez.magwas.zent.canvas.jar = bin/
+output.org.rulez.magwas.zenta.canvas.jar = bin/
