--- a/org.rulez.magwas.zenta.export/plugin.xml
+++ b/org.rulez.magwas.zenta.export/plugin.xml
@@ -16,7 +16,7 @@
             id="org.rulez.magwas.styledhtml.prefsStyled"
             name="Export">
          <keywordReference
-               id="StyledExport">
+               id="keyword.prefsExport">
          </keywordReference>
       </page>
    </extension>
@@ -28,4 +28,12 @@
             label="Model to rich format">
       </exportHandler>
    </extension>
+      <extension
+         point="org.eclipse.ui.keywords">
+      <keyword
+            id="keyword.prefsExport"
+            label="%keyword.export">
+      </keyword>
+      </extension>
+   
 </plugin>
