logo and splash screen for branding #12

--- a/org.rulez.magwas.zenta.editor.build/branding/linux/Zenta.ini
+++ b/org.rulez.magwas.zenta.editor.build/branding/linux/Zenta.ini
@@ -3,5 +3,5 @@
 -Xmx512m
 -XX:MaxPermSize=256m
 -Dosgi.requiredJavaVersion=1.6
--Dosgi.instance.area=@user.home/uk.ac.bolton/Zenta
--Dosgi.configuration.area=@user.home/uk.ac.bolton/Zenta/configuration
+-Dosgi.instance.area=@user.home/.Zenta
+-Dosgi.configuration.area=@user.home/.Zenta/configuration
