--- a/org.rulez.magwas.zenta.editor.build/branding/mac/Zenta.ini
+++ b/org.rulez.magwas.zenta.editor.build/branding/mac/Zenta.ini
@@ -3,5 +3,5 @@
 -Xmx512m
 -XX:MaxPermSize=256m
 -Dosgi.requiredJavaVersion=1.6
--Dosgi.instance.area=@user.home/Library/Application Support/uk.ac.bolton/Zenta
--Dosgi.configuration.area=@user.home/Library/Application Support/uk.ac.bolton/Zenta
+-Dosgi.instance.area=@user.home/Library/Application Support/org.rulez.magwas/Zenta
+-Dosgi.configuration.area=@user.home/Library/Application Support/org.rulez.magwas/Zenta
