--- a/org.rulez.magwas.zenta.editor.build/branding/windows/Zenta.ini
+++ b/org.rulez.magwas.zenta.editor.build/branding/windows/Zenta.ini
@@ -3,5 +3,5 @@
 -Xmx512m
 -XX:MaxPermSize=256m
 -Dosgi.requiredJavaVersion=1.6
--Dosgi.instance.area=@user.home/Application Data/uk.ac.bolton/Zenta
--Dosgi.configuration.area=@user.home/Application Data/uk.ac.bolton/Zenta
+-Dosgi.instance.area=@user.home/Application Data/org.rulez.magwas/Zenta
+-Dosgi.configuration.area=@user.home/Application Data/org.rulez.magwas/Zenta
