basic object and relation got their final name

--- a/org.rulez.magwas.zenta.help/plugin.properties
+++ b/org.rulez.magwas.zenta.help/plugin.properties
@@ -9,7 +9,7 @@ hint.title = Business Actor
 hint.title.0 = Business Role
 hint.title.1 = Business Collaboration
 hint.title.2 = Business Interface
-hint.title.3 = Business Object
+hint.title.3 = Basic Object
 hint.title.4 = Business Process
 hint.title.5 = Business Activity
 hint.title.6 = Business Function
@@ -44,7 +44,7 @@ hint.title.34 = Assignment relationship
 hint.title.35 = Realisation relationship
 hint.title.36 = Used By relationship
 hint.title.37 = Access relationship
-hint.title.38 = Association relationship
+hint.title.38 = Basic relationship
 hint.title.39 = Triggering relationship
 hint.title.40 = Flow relationship
 hint.title.41 = Specialisation relationship
