--- a/org.rulez.magwas.zenta.editor.fullscreen.macos/pom.xml
+++ b/org.rulez.magwas.zenta.editor.fullscreen.macos/pom.xml
@@ -10,4 +10,28 @@
   <artifactId>org.rulez.magwas.zenta.editor.fullscreen.macos</artifactId>
   <packaging>eclipse-plugin</packaging>
  
+  <build>
+   <plugins>
+    <plugin>
+     <groupId>org.eclipse.tycho</groupId>
+     <artifactId>target-platform-configuration</artifactId>
+     <version>${tycho-version}</version>
+     <configuration>
+      <environments>
+       <environment>
+        <os>macosx</os>
+        <ws>cocoa</ws>
+        <arch>x86_64</arch>
+       </environment>
+       <environment>
+        <os>macosx</os>
+        <ws>cocoa</ws>
+        <arch>x86</arch>
+       </environment>
+      </environments>
+     </configuration>
+    </plugin>
+  </plugins>
+</build>
 </project>
+
