editor tests integrated to maven build

--- a/org.rulez.magwas.zenta.export/build.properties
+++ b/org.rulez.magwas.zenta.export/build.properties
@@ -1,6 +1,7 @@
 bin.includes = META-INF/,\
                plugin.xml,\
                LICENSE.txt,\
-               org.rulez.magwas.zenta.export.jar
+               org.rulez.magwas.zenta.export.jar,\
+               styles/
 jars.compile.order = org.rulez.magwas.zenta.export.jar
 source.org.rulez.magwas.zenta.export.jar = src/
