--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: java
 before_install:
+  - "apt-get install firefox"
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
 script: mvn integration-test -B
