compiles with eclipse 3.8

--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,14 @@
  
   <repositories>
    <repository>
-     <id>indigo</id>
+     <id>3.8</id>
      <layout>p2</layout>
-     <url>http://download.eclipse.org/releases/indigo</url>
+     <url>http://download.eclipse.org/eclipse/updates/3.8</url>
+   </repository>
+   <repository>
+     <id>juno</id>
+     <layout>p2</layout>
+     <url>http://download.eclipse.org/releases/juno</url>
    </repository>
   </repositories>
  
