--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
   </properties>
  
   <repositories>
-   <repository>
+   <!--repository>
      <id>3.8</id>
      <layout>p2</layout>
      <url>http://download.eclipse.org/eclipse/updates/3.8</url>
@@ -40,6 +40,11 @@
      <id>juno</id>
      <layout>p2</layout>
      <url>http://download.eclipse.org/releases/juno</url>
+   </repository-->
+   <repository>
+     <id>indigo</id>
+     <layout>p2</layout>
+     <url>http://download.eclipse.org/releases/indigo</url>
    </repository>
   </repositories>
  
