--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 script:
-- mvn integration-test -B && git clone https://github.com/magwas/zorp.git -b identity ../identity && ../identity/buildForLaunchpad
+- mvn integration-test -B 
 env:
   global:
     secure: bQ9qCG/0Q0Cmkm5RAofvxj3yz8t0Lhg9CmP1jKN/BoCSsGrJwt7iqNZaSqGpgoRGfVxyfiNc4dZSU+vvr5iXuwewEWaI347gGiCJvjQA2I/rGGfohqIFfMAsyBOaNlntO+hS6Q3zuIHa2gA/cminDRzDghLm/Q/aUB2Dz7s7BHk=
