Basic object have hint. The Hints view shows hint based on ObjectClass for Diagram Elements as well.  closes #35 #31 #27

--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,8 @@
 	dh $@ 
 
 override_dh_auto_build:
-	mvn -Pno-unit-tests install 
+	echo display is $(DISPLAY) home is $(HOME)
+	mvn install 
 
 override_dh_clean:
 	dh_clean
