--- a/org.rulez.magwas.zenta.editor/plugin.xml
+++ b/org.rulez.magwas.zenta.editor/plugin.xml
@@ -32,10 +32,10 @@
            value="%aboutText"/>
      <property
            name="aboutImage"
-           value="img/app-128.png"/>
+           value="../org.rulez.magwas.zenta.editor/img/app-128.png"/>
      <property
            name="windowImages"
-           value="img/app-16.png,img/app-32.png,img/app-48.png,img/app-64.png,img/app-128.png"/>
+           value="../org.rulez.magwas.zenta.editor/img/app-16.png,../org.rulez.magwas.zenta.editor/img/app-32.png,../org.rulez.magwas.zenta.editor/img/app-48.png,../org.rulez.magwas.zenta.editor/img/app-64.png,../org.rulez.magwas.zenta.editor/img/app-128.png"/>
      <property
            name="preferenceCustomization"
            value="plugin_customization.ini">
