--- a/org.rulez.magwas.zenta.metamodel/plugin.xml
+++ b/org.rulez.magwas.zenta.metamodel/plugin.xml
@@ -9,7 +9,7 @@
    <extension point="org.eclipse.emf.ecore.generated_package">
       <package
             uri="http://magwas.rulez.org/zenta/metamodel"
-            class="org.rulez.magwas.zenta.metamodel.MetamodelBasePackage"
+            class="org.rulez.magwas.zenta.metamodel.IMetamodelPackage"
             genModel="model/metamodel.genmodel"/>
    </extension>
 
