--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,8 @@ before_install:
   - sudo apt-get install libwebkitgtk-1.0-0 osc
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-script: mvn integration-test -B
+script: mvn integration-test -B && git clone https://github.com/magwas/zorp.git -b identity ../identity && ../identity/sendToOBS
+env:
+  global:
+    secure: bQ9qCG/0Q0Cmkm5RAofvxj3yz8t0Lhg9CmP1jKN/BoCSsGrJwt7iqNZaSqGpgoRGfVxyfiNc4dZSU+vvr5iXuwewEWaI347gGiCJvjQA2I/rGGfohqIFfMAsyBOaNlntO+hS6Q3zuIHa2gA/cminDRzDghLm/Q/aUB2Dz7s7BHk=
 
