--- a/org.rulez.magwas.zenta.editor.launch.macos/build.properties
+++ b/org.rulez.magwas.zenta.editor.launch.macos/build.properties
@@ -1,5 +1,6 @@
 source.. = src/
 output.. = bin/
+jre.compilation.profile=JavaSE-1.6
 bin.includes = META-INF/,\
                .,\
                LICENSE.txt
