--- a/org.rulez.magwas.zenta.integrationtests/build.properties
+++ b/org.rulez.magwas.zenta.integrationtests/build.properties
@@ -1,5 +1,6 @@
 source.. = src/
 output.. = bin/
 jre.compilation.profile=JavaSE-1.6
-bin.includes = META-INF/
+bin.includes = META-INF/,\
+               mockito-all-1.9.5.jar
                
