--- a/org.rulez.magwas.zenta.integrationtests/pom.xml
+++ b/org.rulez.magwas.zenta.integrationtests/pom.xml
@@ -25,6 +25,16 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
           <dependencies>
             <dependency>
               <type>eclipse-plugin</type>
+              <artifactId>org.eclipse.core.runtime.compatibility.registry</artifactId>
+              <version>0.0.0</version>
+            </dependency>
+            <dependency>
+              <type>eclipse-plugin</type>
+              <artifactId>org.eclipse.equinox.event</artifactId>
+              <version>0.0.0</version>
+            </dependency>
+            <dependency>
+              <type>eclipse-plugin</type>
               <artifactId>javax.servlet.jsp</artifactId>
               <version>0.0.0</version>
             </dependency>
