--- a/pom.xml
+++ b/pom.xml
@@ -30,14 +30,14 @@
  
   <repositories>
    <repository>
-     <id>4.4</id>
+     <id>4.5</id>
      <layout>p2</layout>
-     <url>http://download.eclipse.org/eclipse/updates/4.4</url>
+     <url>http://download.eclipse.org/eclipse/updates/4.5</url>
    </repository>
    <repository>
      <id>orbit</id>
      <layout>p2</layout>
-     <url>http://download.eclipse.org/tools/orbit/downloads/drops/R20140525021250/repository/</url>
+     <url>http://download.eclipse.org/tools/orbit/downloads/drops/R20150821153341/repository/</url>
    </repository>
    <repository>
      <id>GEF</id>
@@ -59,6 +59,15 @@
         <artifactId>target-platform-configuration</artifactId>
         <version>${tycho-version}</version>
         <configuration>
+            <dependency-resolution>
+                <extraRequirements>
+                    <requirement>
+                        <type>eclipse-plugin</type>
+                        <id>org.eclipse.osgi.compatibility.state</id>
+                        <versionRange>0.0.0</versionRange>
+                    </requirement>
+                </extraRequirements>
+            </dependency-resolution>
           <environments>
             <environment>
               <os>linux</os>
