--- a/shippable.yml
+++ b/shippable.yml
@@ -1,6 +1,7 @@
 build_image: magwas/edemotest:zentabuild
 before_install:
 - export DISPLAY=:0
+- apt-get -y install tightvncserver
 - Xvnc :0&
 script:
 - mkdir ./org.rulez.magwas.zenta.integrationtests/generated-images
