Create a profile to wrap tycho lifecycle mapping

--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,12 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>org.rulez.magwas.zenta</groupId>
   <artifactId>parent</artifactId>
   <version>2.4.0.qualifier</version>
   <packaging>pom</packaging>
+  
   <modules>
     <module>org.rulez.magwas.zenta.model</module>
     <module>org.rulez.magwas.zenta.widgets</module>
@@ -111,61 +114,62 @@
         </configuration>
       </plugin>
     </plugins>
-  	<pluginManagement>
-  		<plugins>
-  			<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-  			<plugin>
-  				<groupId>org.eclipse.m2e</groupId>
-  				<artifactId>lifecycle-mapping</artifactId>
-  				<version>1.0.0</version>
-  				<configuration>
-  					<lifecycleMappingMetadata>
-  						<pluginExecutions>
-  							<pluginExecution>
-  								<pluginExecutionFilter>
-  									<groupId>
-  										org.eclipse.tycho
-  									</groupId>
-  									<artifactId>
-  										tycho-packaging-plugin
-  									</artifactId>
-  									<versionRange>
-  										[0.19.0,)
-  									</versionRange>
-  									<goals>
-  										<goal>validate-id</goal>
-  										<goal>build-qualifier</goal>
-  										<goal>validate-version</goal>
-  									</goals>
-  								</pluginExecutionFilter>
-  								<action>
-  									<ignore></ignore>
-  								</action>
-  							</pluginExecution>
-  							<pluginExecution>
-  								<pluginExecutionFilter>
-  									<groupId>
-  										org.eclipse.tycho
-  									</groupId>
-  									<artifactId>
-  										tycho-compiler-plugin
-  									</artifactId>
-  									<versionRange>
-  										[0.19.0,)
-  									</versionRange>
-  									<goals>
-  										<goal>compile</goal>
-  									</goals>
-  								</pluginExecutionFilter>
-  								<action>
-  									<ignore></ignore>
-  								</action>
-  							</pluginExecution>
-  						</pluginExecutions>
-  					</lifecycleMappingMetadata>
-  				</configuration>
-  			</plugin>
-  		</plugins>
-  	</pluginManagement>
   </build>
+  
+  <profiles>
+    <profile>
+      <id>only-under-eclipse</id>
+      <activation>
+        <property>
+          <name>m2e.version</name>
+        </property>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.eclipse.m2e</groupId>
+              <artifactId>lifecycle-mapping</artifactId>
+              <version>1.0.0</version>
+              <configuration>
+                <lifecycleMappingMetadata>
+                  <pluginExecutions>
+                    <pluginExecution>
+                                <pluginExecutionFilter>
+                                    <groupId>org.eclipse.tycho</groupId>
+                                    <artifactId>tycho-packaging-plugin</artifactId>
+                                    <versionRange>${tycho-version}</versionRange>
+                                    <goals>
+                                        <goal>validate-id</goal>
+                                        <goal>build-qualifier</goal>
+                                        <goal>validate-version</goal>
+                                    </goals>
+                                </pluginExecutionFilter>
+                                <action>
+                                    <ignore></ignore>
+                                </action>
+                    </pluginExecution>
+                    <pluginExecution>
+                                <pluginExecutionFilter>
+                                    <groupId>org.eclipse.tycho</groupId>
+                                    <artifactId>tycho-compiler-plugin</artifactId>
+                                    <versionRange>${tycho-version}</versionRange>
+                                    <goals>
+                                        <goal>compile</goal>
+                                    </goals>
+                                </pluginExecutionFilter>
+                                <action>
+                                    <ignore></ignore>
+                                </action>
+                    </pluginExecution>
+                  </pluginExecutions>
+                </lifecycleMappingMetadata>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+  </profiles>
+  
 </project>
