--- a/org.rulez.magwas.zenta.integrationtests/build.properties
+++ b/org.rulez.magwas.zenta.integrationtests/build.properties
@@ -2,5 +2,5 @@ source.. = src/
 output.. = bin/
 jre.compilation.profile=JavaSE-1.6
 bin.includes = META-INF/,\
-               mockito-all-1.9.5.jar
+               lib/mockito-all.jar
                
