--- a/uk.ac.bolton.jdom/.classpath
+++ b/uk.ac.bolton.jdom/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="jaxen-1.1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="jdom.jar" sourcepath="jdom-1.1.1-src.zip"/>
-	<classpathentry exported="true" kind="lib" path="saxon9he.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jaxen.jar" sourcepath="lib/jaxen-src.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jdom.jar" sourcepath="lib/jdom-src.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/saxon9he.jar" sourcepath="lib/saxon9he-src.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
