--- a/uk.ac.bolton.jdom/build.properties
+++ b/uk.ac.bolton.jdom/build.properties
@@ -1,7 +1,7 @@
 bin.includes = META-INF/,\
-               jaxen-1.1.3.jar,\
-               saxon9he.jar,\
-               jdom.jar,\
+               lib/jaxen.jar,\
+               lib/saxon9he.jar,\
+               lib/jdom.jar,\
                JDOM LICENSE.txt,\
                JAXEN LICENSE.txt,\
                uk.ac.bolton.jdom.jar
