--- a/uk.ac.bolton.jdom/pom.xml
+++ b/uk.ac.bolton.jdom/pom.xml
@@ -11,5 +11,148 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   <artifactId>uk.ac.bolton.jdom</artifactId>
   <packaging>eclipse-plugin</packaging>
   <version>1.1.1.qualifier</version>
+
+  <properties>
+        <lib.dir>${project.basedir}/lib/</lib.dir>
+        
+        <!-- These labels are used in .classpath, build.properties and META-INF/MANIFEST.MF -->
+        <jdom.generic.name>jdom</jdom.generic.name>
+        <jaxen.generic.name>jaxen</jaxen.generic.name>
+        <saxon.generic.name>saxon9he</saxon.generic.name>
+
+        <jdom.version>1.1.2</jdom.version>
+        <jaxen.version>1.1.3</jaxen.version>
+        <saxon.version>9.6.0-1</saxon.version>
+  </properties>
+    
+  <build>
+            <pluginManagement>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <configuration>
+                                    <outputDirectory>${lib.dir}</outputDirectory>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>copy</id>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>org.jdom</groupId>
+                                            <artifactId>jdom</artifactId>
+                                            <version>${jdom.version}</version>
+                                            <type>jar</type>
+                                            <overWrite>false</overWrite>
+                                            <destFileName>${jdom.generic.name}.jar</destFileName>
+                                        </artifactItem>
+                                        <artifactItem>
+                                            <groupId>org.jdom</groupId>
+                                            <artifactId>jdom</artifactId>
+                                            <version>${jdom.version}</version>
+                                            <type>jar</type>
+                                            <overWrite>false</overWrite>
+                                            <classifier>sources</classifier>
+                                            <destFileName>${jdom.generic.name}-src.jar</destFileName>
+                                        </artifactItem>
+                                        <artifactItem>
+                                            <groupId>jaxen</groupId>
+                                            <artifactId>jaxen</artifactId>
+                                            <version>${jaxen.version}</version>
+                                            <type>jar</type>
+                                            <overWrite>false</overWrite>
+                                            <destFileName>${jaxen.generic.name}.jar</destFileName>
+                                        </artifactItem>
+                                        <artifactItem>
+                                            <groupId>jaxen</groupId>
+                                            <artifactId>jaxen</artifactId>
+                                            <version>${jaxen.version}</version>
+                                            <type>jar</type>
+                                            <overWrite>false</overWrite>
+                                            <classifier>sources</classifier>
+                                            <destFileName>${jaxen.generic.name}-src.jar</destFileName>
+                                        </artifactItem>
+                                        <artifactItem>
+                                            <groupId>net.sf.saxon</groupId>
+                                            <artifactId>Saxon-HE</artifactId>
+                                            <version>${saxon.version}</version>
+                                            <type>jar</type>
+                                            <overWrite>false</overWrite>
+                                            <destFileName>${saxon.generic.name}.jar</destFileName>
+                                        </artifactItem>
+                                        <artifactItem>
+                                            <groupId>net.sf.saxon</groupId>
+                                            <artifactId>Saxon-HE</artifactId>
+                                            <version>${saxon.version}</version>
+                                            <type>jar</type>
+                                            <overWrite>false</overWrite>
+                                            <classifier>sources</classifier>
+                                            <destFileName>${saxon.generic.name}-src.jar</destFileName>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>                                
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </pluginManagement>
+  </build>        
+    
+
+  <profiles>
+        <profile>
+            <id>update-jdom</id>
+            <activation>
+                <file>
+                    <missing>${lib.dir}/${jdom.generic.name}.jar</missing>
+                </file>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>update-jaxen</id>
+            <activation>
+                <file>
+                    <missing>${lib.dir}/${jaxen.generic.name}.jar</missing>
+                </file>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>update-saxon</id>
+            <activation>
+                <file>
+                    <missing>${lib.dir}/${saxon.generic.name}.jar</missing>
+                </file>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+  </profiles>
  
 </project>
