--- a/org.rulez.magwas.zenta.widgets/.classpath
+++ b/org.rulez.magwas.zenta.widgets/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.nebula.widgets.grid_1.0.0.201112231516.jar" sourcepath="lib/org.eclipse.nebula.widgets.grid.source_1.0.0.201112231516.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.nebula.widgets.gallery_0.5.3.201111151116.jar" sourcepath="lib/org.eclipse.nebula.widgets.gallery.source_0.5.3.201111151116.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
