--- a/uk.ac.bolton.jdom/.classpath
+++ b/uk.ac.bolton.jdom/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/jaxen.jar" sourcepath="lib/jaxen-src.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jdom.jar" sourcepath="lib/jdom-src.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/saxon9he.jar" sourcepath="lib/saxon9he-src.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
