--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     <module>org.rulez.magwas.zenta.editor</module>
     <module>org.rulez.magwas.zenta.editor.browser</module>
     <module>org.rulez.magwas.zenta.export</module>
+    <module>org.rulez.magwas.zenta.controller</module>
+    <module>org.rulez.magwas.zenta.controller.tests</module>
     <module>org.rulez.magwas.zenta.model.tests</module>
     <module>org.rulez.magwas.zenta.editor.build</module>
     <module>org.rulez.magwas.zenta.editor.fullscreen.macos</module>
