--- a/org.rulez.magwas.zenta.controller/build.properties
+++ b/org.rulez.magwas.zenta.controller/build.properties
@@ -1,5 +1,4 @@
-bin.includes = model/,\
-               META-INF/,\
+bin.includes = META-INF/,\
                plugin.xml,\
                plugin.properties,\
                LICENSE.txt,\
