--- a/org.rulez.magwas.zenta.model.tests/pom.xml
+++ b/org.rulez.magwas.zenta.model.tests/pom.xml
@@ -25,6 +25,73 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     </plugins>
   </build>
 
+  <properties>
+    <lib.dir>${project.basedir}/lib/</lib.dir>
+    <mockito.generic.name>mockito-all</mockito.generic.name>
+    <mockito.version>1.9.5</mockito.version>
+  </properties>
+  
+  <profiles>
+    <profile>
+      <id>no-unit-tests</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.eclipse.tycho</groupId>
+            <artifactId>tycho-surefire-plugin</artifactId>
+            <configuration>
+              <skipTests>true</skipTests>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+        <profile>
+            <id>update-mockito</id>
+            <activation>
+                <file>
+                    <missing>${lib.dir}/${mockito.generic.name}.jar</missing>
+                </file>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy</id>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${lib.dir}</outputDirectory>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>org.mockito</groupId>
+                                            <artifactId>mockito-all</artifactId>
+                                            <version>${mockito.version}</version>
+                                            <type>jar</type>
+                                            <overWrite>false</overWrite>
+                                            <destFileName>${mockito.generic.name}.jar</destFileName>
+                                        </artifactItem>
+                                        <artifactItem>
+                                            <groupId>org.mockito</groupId>
+                                            <artifactId>mockito-all</artifactId>
+                                            <version>${mockito.version}</version>
+                                            <type>jar</type>
+                                            <overWrite>false</overWrite>
+                                            <classifier>sources</classifier>
+                                            <destFileName>${mockito.generic.name}-src.jar</destFileName>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+  </profiles>
 </project>
-
-
