--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,26 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
               <configuration>
                 <lifecycleMappingMetadata>
                   <pluginExecutions>
+                                                       <pluginExecution>
+                                                               <pluginExecutionFilter>
+                                                                       <groupId>
+                                                                               org.apache.maven.plugins
+                                                                       </groupId>
+                                                                       <artifactId>
+                                                                               maven-toolchains-plugin
+                                                                       </artifactId>
+                                                                       <versionRange>
+                                                                               [1.1,)
+                                                                       </versionRange>
+                                                                       <goals>
+                                                                               <goal>toolchain</goal>
+                                                                       </goals>
+                                                               </pluginExecutionFilter>
+                                                               <action>
+                                                                       <ignore></ignore>
+                                                               </action>
+                                                       </pluginExecution>
+
                     <pluginExecution>
                                 <pluginExecutionFilter>
                                     <groupId>org.eclipse.tycho</groupId>
