--- a/org.rulez.magwas.zenta.integrationtests/pom.xml
+++ b/org.rulez.magwas.zenta.integrationtests/pom.xml
@@ -244,6 +244,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
             </dependency>
             <dependency>
               <type>eclipse-plugin</type>
+              <artifactId>org.rulez.magwas.zenta.controller.tests</artifactId>
+              <version>0.0.0</version>
+            </dependency>
+            <dependency>
+              <type>eclipse-plugin</type>
               <artifactId>uk.ac.bolton.jdom</artifactId>
               <version>0.0.0</version>
             </dependency>
