--- a/uk.ac.bolton.jdom/build.properties
+++ b/uk.ac.bolton.jdom/build.properties
@@ -4,7 +4,7 @@ bin.includes = META-INF/,\
                uk.ac.bolton.jdom.jar,\
                lib/jaxen.jar,\
                lib/jdom.jar,\
-               lib/saxon9he.jar
+               lib/saxon9.jar
 jars.compile.order = uk.ac.bolton.jdom.jar
 output.uk.ac.bolton.jdom.jar = bin/
 source.uk.ac.bolton.jdom.jar = src/
