--- a/org.rulez.magwas.zenta.editor.build/branding/linux/Zenta.ini
+++ b/org.rulez.magwas.zenta.editor.build/branding/linux/Zenta.ini
@@ -1,7 +1,12 @@
+-startup
+plugins/org.eclipse.equinox.launcher_1.3.100.v20150511-1540.jar
+--launcher.library
+plugins/org.eclipse.equinox.launcher.gtk.linux.x86_64_1.1.300.v20150602-1417
+--launcher.GTK_version
+2
 -vmargs
 -Xms128m
 -Xmx512m
--XX:MaxPermSize=256m
--Dosgi.requiredJavaVersion=1.6
+-Dosgi.requiredJavaVersion=1.8
 -Dosgi.instance.area=@user.home/.Zenta
 -Dosgi.configuration.area=@user.home/.Zenta/configuration
