--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.rulez.magwas.zenta</groupId>
-  <artifactId>parent</artifactId>
+  <artifactId>zenta</artifactId>
   <version>2.4.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   
@@ -47,7 +47,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     
     <maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
     <maven.clean.plugin.version>3.0.0</maven.clean.plugin.version>
-    
+    <!-- Sonar -->
+    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+    <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+    <sonar.language>java</sonar.language>  
+    <sonar.ogranization>edemo</sonar.ogranization>  
   </properties>
  
   <repositories>
@@ -71,6 +76,23 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   <build>
     <outputDirectory>bin</outputDirectory>
     <plugins>
+		<plugin>
+		    <groupId>org.jacoco</groupId>
+		    <artifactId>jacoco-maven-plugin</artifactId>
+		    <version>0.7.9</version>
+		    <configuration>
+		        <destFile>${sonar.jacoco.reportPath}</destFile>
+		        <append>true</append>
+		    </configuration>
+		    <executions>
+		        <execution>
+		            <id>agent</id>
+		            <goals>
+		                <goal>prepare-agent</goal>
+		            </goals>
+		        </execution>
+		    </executions>
+		</plugin>
       <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>tycho-packaging-plugin</artifactId>
