--- a/org.rulez.magwas.zenta.editor.build/pom.xml
+++ b/org.rulez.magwas.zenta.editor.build/pom.xml
@@ -5,7 +5,7 @@
 
   <parent>
     <groupId>org.rulez.magwas.zenta</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>zenta</artifactId>
     <version>2.4.0-SNAPSHOT</version>
   </parent>
 
