--- a/org.rulez.magwas.zenta.editor.fullscreen.macos/pom.xml
+++ b/org.rulez.magwas.zenta.editor.fullscreen.macos/pom.xml
@@ -4,7 +4,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
  
   <parent>
     <groupId>org.rulez.magwas.zenta</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>zenta</artifactId>
     <version>2.4.0-SNAPSHOT</version>
   </parent>
  
