--- a/shippable.yml
+++ b/shippable.yml
@@ -2,7 +2,10 @@ build_image: magwas/edemotest:zentabuild
 language: python
 python:
   - 2.7
-script:
-- tools/script
-- tools/upload
-
+build:
+  ci:
+    - tools/script
+  on_success:
+    - tools/upload
+  on_failure:
+    - tools/upload
