--- a/org.rulez.magwas.zenta.integrationtests/.classpath
+++ b/org.rulez.magwas.zenta.integrationtests/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="lib/mockito-all.jar"/>
+	<classpathentry kind="lib" path="/org.rulez.magwas.zenta.model.tests/lib/mockito-all.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
